Mon May 25 18:32:49 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: release 0.10
	* NEWS: likewise

Fri May 22 18:07:31 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/Makefile.am: add missing line continuation

Wed May 20 16:33:54 CEST 2009 Guido Günther <agx@sigxcpu.org>

	allow to turn off notifcations
	* src/krb5-auth-applet.c: add action to notifications
	  (ka_send_event_notification): only show notification when
	  corresponding gconf key is set
	* src/krb5-auth-dialog.schemas.in: add schema entries
	* src/krb5-auth-gconf-tools.c (ka_gconf_set_bool): new function
	* src/src/krb5-auth-gconf-tools.c (ka_gconf_set_*): fix defaults
	  (ka_gconf_init); return GconfClient
	* src/krb5-auth-gconf-tools.h: define gconf keys
	BZ: #579850

Fri May 15 19:10:57 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* po/krb5-auth-dialog.pot: update translatable strings
	* po/de.po: likewise
	* po/nb.po: likewise
	* po/sv.po: likewise

Fri May 15 19:08:22 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* etpo/lexer.l: better match the output to the handcrafted version we
	  shipped before.

Fri May 15 19:06:09 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Reduce number of translations by filtering the error messages
	extracted from Kerberos com_err .et files.
	* etpo/Makefile.am: add rule for generating dummy-stings.c
	* src/dummy-strings.c: regenerate

Fri May 15 19:04:11 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/potfiles.in: mark GtKBuilder ui files as glade
	  so they get picked up by intltool

Wed May 13 22:10:45 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog.c (ka_error_dialog): translate Kerberos error
	  messages.

Wed May 13 20:46:03 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* etpo/lexer.c: update regex for newer com_err

Tue May 12 00:31:56 CEST 2009 Guido Günther <agx@sigxcpu.org>

	merge schema translations and use gconftool to install the schema
	* configure.ac: Check for gcontool and add AM_GCONF_SOURCE_2.